--- a/Menu_A_la_francaise.html
+++ b/Menu_A_la_francaise.html
@@ -27,7 +27,7 @@
                     <div id="container_menu">
                         <div class="presentation_menu_name_restaurant">
                             <h1>À la française</h1>
-                            <div class="button_like">
+                            <div tabindex=0 class="button_like">
                                 <i class="fas fa-heart"></i>
                             </div>
                         </div>
@@ -37,7 +37,7 @@
                                 <h2>entrées</h2>
                                 <div class="underline"></div>
                                 <div class="dish_block entree">
-                                    <button class="dish_card">
+                                    <div tabindex=0 class="dish_card">
                                         <div class="dish_card_box">
                                         <div tabindex=0 class="dish">
                                                 <div class="dish_name">
@@ -48,7 +48,7 @@
                                             </div>
                                             <i class="far fa-check-circle"></i>
                                         </div>
-                                    </button>
+                                    </div>
                                     <div tabindex=0 class="dish_card">
                                         <div class="dish_card_box">
                                             <div tabindex=0 class="dish">
@@ -80,10 +80,10 @@
                                 <h2>plats</h2>
                                 <div class="underline"></div>
                                 <div class="dish_block meal">
-                                    <div class="dish_card">
+                                    <div tabindex=0 class="dish_card">
                                         <div class="dish_card_box">
                                             <i class="far fa-check-circle"></i>
-                                            <div class="dish">
+                                            <div tabindex=0 class="dish">
                                                 <div class="dish_name">
                                                     <p class="span">Coquilles Saint-Jacques</p>
                                                     <p>Accompagnées d'une purée de panais</p>
@@ -92,10 +92,10 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="dish_card">
+                                    <div tabindex=0 class="dish_card">
                                         <div class="dish_card_box">
                                             <i class="far fa-check-circle"></i>
-                                            <div class="dish">
+                                            <div tabindex=0 class="dish">
                                                 <div class="dish_name">
                                                     <p class="span">Magret de canard</p>
                                                     <p>Et parmentier de pommes de terre</p>
@@ -104,10 +104,10 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="dish_card">
+                                    <div tabindex=0 class="dish_card">
                                         <div class="dish_card_box">
                                             <i class="far fa-check-circle"></i>
-                                            <div class="dish">
+                                            <div tabindex=0 class="dish">
                                                 <div class="dish_name">
                                                     <p class="span">Pigeonneau d'Ile-et-Vilaine</p>
                                                     <p>Sur son lit de gnocchhis aux légumes</p>
@@ -122,10 +122,10 @@
                                 <h2>desserts</h2>
                                 <div class="underline"></div>
                                 <div class="dish_block dessert">
-                                    <div class="dish_card">
+                                    <div tabindex=0 class="dish_card">
                                         <div class="dish_card_box">
                                             <i class="far fa-check-circle"></i>
-                                            <div class="dish">
+                                            <div tabindex=0 class="dish">
                                                 <div class="dish_name">
                                                     <p class="span">Pétales de violettes glacés</p>
                                                     <p>Et purée de noisettes</p>
@@ -134,10 +134,10 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="dish_card">
+                                    <div tabindex=0 class="dish_card">
                                         <div class="dish_card_box">
                                             <i class="far fa-check-circle"></i>
-                                            <div class="dish">
+                                            <div tabindex=0 class="dish">
                                                 <div class="dish_name">
                                                     <p class="span">Fondant au chocolat</p>
                                                     <p>Revisité</p>
@@ -146,10 +146,10 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="dish_card">
+                                    <div tabindex=0 class="dish_card">
                                         <div class="dish_card_box">
                                             <i class="far fa-check-circle"></i>
-                                            <div class="dish">
+                                            <div tabindex=0 class="dish">
                                                 <div class="dish_name">
                                                     <p class="span">Millefeuille croustillant</p>
                                                     <p>Myrtilles et pâte d'amande</p>
