--- a/Menu_La_note_enchantee.html
+++ b/Menu_La_note_enchantee.html
@@ -27,7 +27,7 @@
                     <div id="container_menu">
                         <div class="presentation_menu_name_restaurant">
                             <h1>La note enchantée</h1>
-                            <div class="button_like">
+                            <div tabindex=0 class="button_like">
                                 <i class="fas fa-heart"></i>
                             </div>
                         </div>
@@ -37,9 +37,9 @@
                                 <h2>entrées</h2>
                                 <div class="underline"></div>
                                 <div class="dish_block entree">
-                                    <div class="dish_card">
+                                    <div tabindex=0 class="dish_card">
                                         <div class="dish_card_box">
-                                        <div class="dish">
+                                        <div tabindex=0 class="dish">
                                                 <div class="dish_name">
                                                     <p class="span">Ravioles de foie gras</p>
                                                     <p>Accompagnés de leur crème à la truffe</p>
@@ -49,9 +49,9 @@
                                             <i class="far fa-check-circle"></i>
                                         </div>
                                     </div>
-                                    <div class="dish_card">
+                                    <div tabindex=0 class="dish_card">
                                         <div class="dish_card_box">
-                                            <div class="dish">
+                                            <div tabindex=0 class="dish">
                                                 <div class="dish_name">
                                                     <p class="span">Caviar osciètre</p>
                                                     <p>Sur blini à la farine de blé noir</p>
@@ -61,9 +61,9 @@
                                             <i class="far fa-check-circle"></i>
                                         </div>
                                     </div>
-                                    <div class="dish_card">
+                                    <div tabindex=0 class="dish_card">
                                         <div class="dish_card_box">
-                                            <div class="dish">
+                                            <div tabindex=0 class="dish">
                                                 <div class="dish_name">
                                                     <p class="span">Homard et espuma de potiron</p>
                                                     <p>Mariné aux zestes d'orange</p>
@@ -73,9 +73,9 @@
                                             <i class="far fa-check-circle"></i>
                                         </div>
                                     </div>
-                                    <div class="dish_card">
+                                    <div tabindex=0 class="dish_card">
                                         <div class="dish_card_box">
-                                            <div class="dish">
+                                            <div tabindex=0 class="dish">
                                                 <div class="dish_name">
                                                     <p class="span">Foie gras de canard cuit entier</p>
                                                     <p>Confiture de figue et pain toasté</p>
@@ -91,10 +91,10 @@
                                 <h2>plats</h2>
                                 <div class="underline"></div>
                                 <div class="dish_block meal">
-                                    <div class="dish_card">
+                                    <div tabindex=0 class="dish_card">
                                         <div class="dish_card_box">
                                             <i class="far fa-check-circle"></i>
-                                            <div class="dish">
+                                            <div tabindex=0 class="dish">
                                                 <div class="dish_name">
                                                     <p class="span">Noix de coquilles Saint-Jacques</p>
                                                     <p>Sur lit de purée de céléri-rave</p>
@@ -103,10 +103,10 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="dish_card">
+                                    <div tabindex=0 class="dish_card">
                                         <div class="dish_card_box">
                                             <i class="far fa-check-circle"></i>
-                                            <div class="dish">
+                                            <div tabindex=0 class="dish">
                                                 <div class="dish_name">
                                                     <p class="span">Langoustine poêlée</p>
                                                     <p>Purée de patate douce</p>
@@ -115,10 +115,10 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="dish_card">
+                                    <div tabindex=0 class="dish_card">
                                         <div class="dish_card_box">
                                             <i class="far fa-check-circle"></i>
-                                            <div class="dish">
+                                            <div tabindex=0 class="dish">
                                                 <div class="dish_name">
                                                     <p class="span">Mijoté de queue de boeuf</p>
                                                     <p>Et riz sauvage aux zestes de citron</p>
@@ -133,10 +133,10 @@
                                 <h2>desserts</h2>
                                 <div class="underline"></div>
                                 <div class="dish_block dessert">
-                                    <div class="dish_card">
+                                    <div tabindex=0 class="dish_card">
                                         <div class="dish_card_box">
                                             <i class="far fa-check-circle"></i>
-                                            <div class="dish">
+                                            <div tabindex=0 class="dish">
                                                 <div class="dish_name">
                                                     <p class="span">Macaron noisette et chocolat</p>
                                                     <p>Glace au caramel brun et sel de Guérande</p>
@@ -145,10 +145,10 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="dish_card">
+                                    <div tabindex=0 class="dish_card">
                                         <div class="dish_card_box">
                                             <i class="far fa-check-circle"></i>
-                                            <div class="dish">
+                                            <div tabindex=0 class="dish">
                                                 <div class="dish_name">
                                                     <p class="span">Baba au rhum revisité</p>
                                                     <p>Avec son coulis de citron</p>
@@ -157,10 +157,10 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="dish_card">
+                                    <div tabindex=0 class="dish_card">
                                         <div class="dish_card_box">
                                             <i class="far fa-check-circle"></i>
-                                            <div class="dish">
+                                            <div tabindex=0 class="dish">
                                                 <div class="dish_name">
                                                     <p class="span">Tarte au citron meringuée</p>
                                                     <p>Déstructurée</p>
