--- a/Menu_La_palette_du_gout.html
+++ b/Menu_La_palette_du_gout.html
@@ -27,7 +27,7 @@
                     <div id="container_menu">
                         <div class="presentation_menu_name_restaurant">
                             <h1>La palette du goût</h1>
-                            <div class="button_like">
+                            <div tabindex=0 class="button_like">
                                 <i class="fas fa-heart"></i>
                             </div>
                         </div>
@@ -37,9 +37,9 @@
                                 <h2>entrées</h2>
                                 <div class="underline"></div>
                                 <div class="dish_block entree">
-                                    <div class="dish_card">
+                                    <div tabindex=0 class="dish_card">
                                         <div class="dish_card_box">
-                                        <div class="dish">
+                                        <div tabindex=0 class="dish">
                                                 <div class="dish_name">
                                                     <p class="span">Fricassée d'escargot</p>
                                                     <p>Au piment d'espelette</p>
@@ -49,9 +49,9 @@
                                             <i class="far fa-check-circle"></i>
                                         </div>
                                     </div>
-                                    <div class="dish_card">
+                                    <div tabindex=0 class="dish_card">
                                         <div class="dish_card_box">
-                                            <div class="dish">
+                                            <div tabindex=0 class="dish">
                                                 <div class="dish_name">
                                                     <p class="span">Foie gras de canard mi-cuit</p>
                                                     <p>Et ses copeaux de truffe noire</p>
@@ -61,9 +61,9 @@
                                             <i class="far fa-check-circle"></i>
                                         </div>
                                     </div>
-                                    <div class="dish_card">
+                                    <div tabindex=0 class="dish_card">
                                         <div class="dish_card_box">
-                                            <div class="dish">
+                                            <div tabindex=0 class="dish">
                                                 <div class="dish_name">
                                                     <p class="span">Oeuf au plat</p>
                                                     <p>Assaisonné à la truffe sur lit de caviar</p>
@@ -80,10 +80,10 @@
                                 <h2>plats</h2>
                                 <div class="underline"></div>
                                 <div class="dish_block meal">
-                                    <div class="dish_card">
+                                    <div tabindex=0 class="dish_card">
                                         <div class="dish_card_box">
                                             <i class="far fa-check-circle"></i>
-                                            <div class="dish">
+                                            <div tabindex=0 class="dish">
                                                 <div class="dish_name">
                                                     <p class="span">Filet de boeuf aux herbes</p>
                                                     <p>Accompagné de sa ribambelle de légumes</p>
@@ -92,10 +92,10 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="dish_card">
+                                    <div tabindex=0 class="dish_card">
                                         <div class="dish_card_box">
                                             <i class="far fa-check-circle"></i>
-                                            <div class="dish">
+                                            <div tabindex=0 class="dish">
                                                 <div class="dish_name">
                                                     <p class="span">Parmentier de queue de boeuf</p>
                                                     <p>À la truffe noire sur sa purée de panais</p>
@@ -104,10 +104,10 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="dish_card">
+                                    <div tabindex=0 class="dish_card">
                                         <div class="dish_card_box">
                                             <i class="far fa-check-circle"></i>
-                                            <div class="dish">
+                                            <div tabindex=0 class="dish">
                                                 <div class="dish_name">
                                                     <p class="span">Filet de turbot</p>
                                                     <p>Aux agrumes</p>
@@ -122,10 +122,10 @@
                                 <h2>desserts</h2>
                                 <div class="underline"></div>
                                 <div class="dish_block dessert">
-                                    <div class="dish_card">
+                                    <div tabindex=0 class="dish_card">
                                         <div class="dish_card_box">
                                             <i class="far fa-check-circle"></i>
-                                            <div class="dish">
+                                            <div tabindex=0 class="dish">
                                                 <div class="dish_name">
                                                     <p class="span">Paris-Brest</p>
                                                     <p>Revisité</p>
@@ -134,10 +134,10 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="dish_card">
+                                    <div tabindex=0 class="dish_card">
                                         <div class="dish_card_box">
                                             <i class="far fa-check-circle"></i>
-                                            <div class="dish">
+                                            <div tabindex=0 class="dish">
                                                 <div class="dish_name">
                                                     <p class="span">Macaron au chocolat d'exception</p>
                                                     <p>Et glace à la vanille de Madagascar</p>
@@ -146,10 +146,10 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="dish_card">
+                                    <div tabindex=0 class="dish_card">
                                         <div class="dish_card_box">
                                             <i class="far fa-check-circle"></i>
-                                            <div class="dish">
+                                            <div tabindex=0 class="dish">
                                                 <div class="dish_name">
                                                     <p class="span">Mousse au chocolat</p>
                                                     <p>Au piment d'Espelette et à la truffe noire</p>
