--- a/Menu_Le_delice_des_sens.html
+++ b/Menu_Le_delice_des_sens.html
@@ -27,7 +27,7 @@
                     <div id="container_menu">
                         <div class="presentation_menu_name_restaurant">
                             <h1>Le délice des sens</h1>
-                            <div class="button_like">
+                            <div tabindex=0 class="button_like">
                                 <i class="fas fa-heart"></i>
                             </div>
                         </div>
@@ -37,9 +37,9 @@
                                 <h2>entrées</h2>
                                 <div class="underline"></div>
                                 <div class="dish_block entree">
-                                    <div class="dish_card">
+                                    <div tabindex=0 class="dish_card">
                                         <div class="dish_card_box">
-                                        <div class="dish">
+                                        <div tabindex=0 class="dish">
                                                 <div class="dish_name">
                                                     <p class="span">Tartare de thon</p>
                                                     <p>Assaisonné au Yuzu</p>
@@ -49,9 +49,9 @@
                                             <i class="far fa-check-circle"></i>
                                         </div>
                                     </div>
-                                    <div class="dish_card">
+                                    <div tabindex=0 class="dish_card">
                                         <div class="dish_card_box">
-                                            <div class="dish">
+                                            <div tabindex=0 class="dish">
                                                 <div class="dish_name">
                                                     <p class="span">Bouchée de homard croustillant</p>
                                                     <p>Et sa farandole de petits légumes</p>
@@ -61,9 +61,9 @@
                                             <i class="far fa-check-circle"></i>
                                         </div>
                                     </div>
-                                    <div class="dish_card">
+                                    <div tabindex=0 class="dish_card">
                                         <div class="dish_card_box">
-                                            <div class="dish">
+                                            <div tabindex=0 class="dish">
                                                 <div class="dish_name">
                                                     <p class="span">Velouté de cèpes</p>
                                                     <p>Aux truffes</p>
@@ -80,10 +80,10 @@
                                 <h2>plats</h2>
                                 <div class="underline"></div>
                                 <div class="dish_block meal">
-                                    <div class="dish_card">
+                                    <div tabindex=0 class="dish_card">
                                         <div class="dish_card_box">
                                             <i class="far fa-check-circle"></i>
-                                            <div class="dish">
+                                            <div tabindex=0 class="dish">
                                                 <div class="dish_name">
                                                     <p class="span">Poulet rôti aux herbes de Provence</p>
                                                     <p>Et sa crème de truffe</p>
@@ -92,10 +92,10 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="dish_card">
+                                    <div tabindex=0 class="dish_card">
                                         <div class="dish_card_box">
                                             <i class="far fa-check-circle"></i>
-                                            <div class="dish">
+                                            <div tabindex=0 class="dish">
                                                 <div class="dish_name">
                                                     <p class="span">Langouste rôtie</p>
                                                     <p>Et ses légumes de saison</p>
@@ -104,10 +104,10 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="dish_card">
+                                    <div tabindex=0 class="dish_card">
                                         <div class="dish_card_box">
                                             <i class="far fa-check-circle"></i>
-                                            <div class="dish">
+                                            <div tabindex=0 class="dish">
                                                 <div class="dish_name">
                                                     <p class="span">Côte de boeuf Angus</p>
                                                     <p>Et sa purée de panais</p>
@@ -122,10 +122,10 @@
                                 <h2>desserts</h2>
                                 <div class="underline"></div>
                                 <div class="dish_block dessert">
-                                    <div class="dish_card">
+                                    <div tabindex=0 class="dish_card">
                                         <div class="dish_card_box">
                                             <i class="far fa-check-circle"></i>
-                                            <div class="dish">
+                                            <div tabindex=0 class="dish">
                                                 <div class="dish_name">
                                                     <p class="span">Farandole de desserts</p>
                                                     <p>Du chef</p>
@@ -134,10 +134,10 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="dish_card">
+                                    <div tabindex=0 class="dish_card">
                                         <div class="dish_card_box">
                                             <i class="far fa-check-circle"></i>
-                                            <div class="dish">
+                                            <div tabindex=0 class="dish">
                                                 <div class="dish_name">
                                                     <p class="span">Crème brulée</p>
                                                     <p>Revisitée</p>
@@ -146,10 +146,10 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="dish_card">
+                                    <div tabindex=0 class="dish_card">
                                         <div class="dish_card_box">
                                             <i class="far fa-check-circle"></i>
-                                            <div class="dish">
+                                            <div tabindex=0 class="dish">
                                                 <div class="dish_name">
                                                     <p class="span">Tiramisu</p>
                                                     <p>À la noisette</p>
