--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <div class="concept">
                         <h1>Réservez le menu qui vous convient</h1>
                         <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
-                        <div class="button pres_restaurants">
+                        <div tabindex=0 class="button pres_restaurants">
                             <a href="#presentation_restaurants">Explorez nos restaurants</a>
                         </div>
                     </div>
@@ -45,7 +45,7 @@
                 <section id="website_functionalities">
                     <h1>Fonctionnement</h1>
                     <div class="functionalities">
-                        <div class="button_functionalities">
+                        <div tabindex=0 class="button_functionalities">
                             <a href="#">
                                 <div class="number_button_functionalities">1</div>
                                 <div class="button_functionalities_instruction">
@@ -54,7 +54,7 @@
                                 </div>
                             </a>
                         </div>
-                        <div class="button_functionalities">
+                        <div tabindex=0 class="button_functionalities">
                             <a href="#">
                                 <div class="number_button_functionalities">2</div>
                                 <div class="button_functionalities_instruction">
@@ -63,7 +63,7 @@
                                 </div>
                             </a>
                         </div>
-                        <div class="button_functionalities">
+                        <div tabindex=0 class="button_functionalities">
                             <a href="#">
                                 <div class="number_button_functionalities">3</div>
                                 <div class="button_functionalities_instruction">
@@ -80,69 +80,66 @@
                     <div id="presentation_restaurants_cartes">
                         <div class="block_carte_restaurant">
                             <a href="./Menu_La_palette_du_gout.html" title="Accéder au menu" target="_blank">
-                            <div class="carte_restaurant">
+                            <div tabindex=0 class="carte_restaurant">
                                 <img src="./Maquettes_Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="photo restaurant La palette du goût"/>
                                 <div class="icon_new">Nouveau</div>
                                 <div class="carte_restaurant_infos">
                                     <div class="carte_restaurant_infos_name">
                                         <h2>La palette du goût</h2>
                                         <p>Ménilmontant</p>
-                                    </div>
+                                    </div> </a>
                                     <div class="button_like">
-                                        <i class="fas fa-heart"></i>
+                                        <i tabindex=0 class="fas fa-heart"></i>
                                     </div>
                                 </div>
                             </div>
-                            </a>
+                           
                         </div>
                         <div class="block_carte_restaurant">
                             <a href="./Menu_La_note_enchantee.html" title="Accéder au menu" target="_blank">
-                            <div class="carte_restaurant">
+                            <div tabindex=0 class="carte_restaurant">
                                 <img src="./Maquettes_Ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="photo restaurant La note enchantée"/>
                                 <div class="icon_new">Nouveau</div>
                                 <div class="carte_restaurant_infos">
                                     <div class="carte_restaurant_infos_name">
                                         <h2>La note enchantée</h2>
                                         <p>Charonne</p>
-                                    </div>
+                                    </div></a>
                                     <div class="button_like">
-                                        <i class="fas fa-heart"></i>
+                                        <i tabindex=0 class="fas fa-heart"></i>
                                     </div>
                                 </div>
                             </div>
-                            </a>
                         </div>
                         <div class="block_carte_restaurant">
                             <a href="./Menu_A_la_francaise.html" title="Accéder au menu" target="_blank">
-                            <div class="carte_restaurant">
+                            <div tabindex=0 class="carte_restaurant">
                                 <img src="./Maquettes_Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="photo restaurant À la française"/>
                                 <div class="carte_restaurant_infos">
                                     <div class="carte_restaurant_infos_name">
                                         <h2>À la française</h2>
                                         <p>Cité Rouge</p>
-                                    </div>
+                                    </div></a>
                                     <div class="button_like">
-                                        <i class="fas fa-heart"></i>
+                                        <i tabindex=0 class="fas fa-heart"></i>
                                     </div>
                                 </div>
                             </div>
-                            </a>
                         </div>
                         <div class="block_carte_restaurant">
                             <a href="./Menu_Le_delice_des_sens.html" title="Accéder au menu" target="_blank">
-                            <div class="carte_restaurant">
+                            <div tabindex=0 class="carte_restaurant">
                                 <img src="./Maquettes_Ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="photo restaurant Le délice des sens"/>
                                 <div class="carte_restaurant_infos">
                                     <div class="carte_restaurant_infos_name">
                                         <h2>Le délice des sens</h2>
                                         <p>Folie Méricourt</p>
-                                    </div>
+                                    </div></a>
                                     <div class="button_like">
-                                        <i class="fas fa-heart"></i>
+                                        <i tabindex=0 class="fas fa-heart"></i>
                                     </div>
                                 </div>
                             </div>
-                            </a>
                         </div>
                     </div>
                 </section>
