--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <div id="presentation_restaurants_cartes">
                         <div class="block_carte_restaurant">
                             <a href="./Menu_La_palette_du_gout.html" title="Accéder au menu" target="_blank">
-                            <div tabindex=0 class="carte_restaurant">
+                            <div class="carte_restaurant">
                                 <img src="./Maquettes_Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="photo restaurant La palette du goût"/>
                                 <div class="icon_new">Nouveau</div>
                                 <div class="carte_restaurant_infos">
@@ -97,7 +97,7 @@
                         </div>
                         <div class="block_carte_restaurant">
                             <a href="./Menu_La_note_enchantee.html" title="Accéder au menu" target="_blank">
-                            <div tabindex=0 class="carte_restaurant">
+                            <div class="carte_restaurant">
                                 <img src="./Maquettes_Ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="photo restaurant La note enchantée"/>
                                 <div class="icon_new">Nouveau</div>
                                 <div class="carte_restaurant_infos">
@@ -113,7 +113,7 @@
                         </div>
                         <div class="block_carte_restaurant">
                             <a href="./Menu_A_la_francaise.html" title="Accéder au menu" target="_blank">
-                            <div tabindex=0 class="carte_restaurant">
+                            <div class="carte_restaurant">
                                 <img src="./Maquettes_Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="photo restaurant À la française"/>
                                 <div class="carte_restaurant_infos">
                                     <div class="carte_restaurant_infos_name">
@@ -128,7 +128,7 @@
                         </div>
                         <div class="block_carte_restaurant">
                             <a href="./Menu_Le_delice_des_sens.html" title="Accéder au menu" target="_blank">
-                            <div tabindex=0 class="carte_restaurant">
+                            <div class="carte_restaurant">
                                 <img src="./Maquettes_Ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="photo restaurant Le délice des sens"/>
                                 <div class="carte_restaurant_infos">
                                     <div class="carte_restaurant_infos_name">
